# order-tracking-module

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 276060628c49_init_tables.py  329af1793778_delete_auth.py  7a4bb7ad373b_fix_schema.py  948ad2fec4fc_init_access_token.py
app/: __init__.py  main.py  uow.py
app/core/: config.py  logging.py
app/db/: session.py
app/order_items/: models.py  repository.py
app/orders/: models.py  repository.py  service.py
app/orders/api/v1/: router.py  schemas.py
app/products/: models.py  repository.py  service.py
app/products/api/v1/: router.py  schemas.py
app/users/: models.py  repository.py  service.py
app/users/api/v1/: dependencies.py  router.py  schemas.py
