[project]
name = "order-tracking-module"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.1",
    "ruff>=0.15.15",
    "sqlalchemy[asyncio]>=2.0.50",
    "uvicorn>=0.48.0",
    "aiosqlite>=0.22.1",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
